<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_muted"
    android:padding="16dp"
    tools:context=".ui.ProductFormActivity">

    <TextView
        android:id="@+id/tv_form_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/product_form_title"
        android:textColor="@color/text_primary"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_form_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/product_form_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_form_title" />

    <LinearLayout
        android:id="@+id/form_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_surface_card"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_form_subtitle">

        <EditText
            android:id="@+id/et_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/product_name_hint"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary" />

        <EditText
            android:id="@+id/et_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/product_price_hint"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary" />

        <EditText
            android:id="@+id/et_product_image_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/product_image_url_hint"
            android:inputType="textUri"
            android:padding="12dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_shape"
            android:onClick="onSaveProductClick"
            android:text="@string/save_product"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_card" />
</androidx.constraintlayout.widget.ConstraintLayout>